# flick

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/middleware/: __init__.py  https_redirect.py  security_headers.py
backend/app/models/: __init__.py  group.py  movie.py  rating.py  taste_profile.py  user.py  watchlist.py
backend/app/routers/: auth.py  groups.py  movies.py  ratings.py  recommendations.py  watchlist.py  websocket.py
backend/app/schemas/: __init__.py  auth.py  group.py  movie.py  rating.py  recommendation.py  watchlist.py  websocket.py
backend/app/services/: auth_service.py  group_service.py  movie_service.py  recommendation_service.py  taste_profile_service.py
backend/app/utils/: jwt_utils.py  logging.py  openai_client.py  rate_limit.py  redis_client.py  sanitize.py  tmdb_client.py
backend/scripts/: generate_rsa_keys.py
backend/tests/: conftest.py  test_auth.py  test_groups.py  test_movies.py  test_ratings.py
frontend/: .env.example  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: footer.tsx  group-session.tsx  mood-search.tsx  movie-card.tsx  nav.tsx  onboarding-hint.tsx  personal-picks.tsx  vote-card.tsx  watchlist-tile.tsx  where-to-watch.tsx
frontend/src/hooks/: use-auth.ts  use-group.ts  use-movies.ts  use-websocket.ts
frontend/src/lib/: api.ts  auth.ts
frontend/src/store/: auth-store.ts  (+1 more)
(+13 files in other folders)
