[project]
name = "flick-backend"
version = "0.1.0"
description = "Flick — group movie recommendation backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "bleach>=6.2.0",
    "python-multipart>=0.0.17",
    "authlib>=1.3.2",
    "itsdangerous>=2.2.0",
    "greenlet>=3.1.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "bandit>=1.7.10",
    "asgi-lifespan>=2.1.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "ASYNC", "S"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
"scripts/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
